# koyracloud

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  README.md  SECURITY.md  e  h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
control-plane/: Dockerfile  pyproject.toml
control-plane/koyracloud/: __init__.py  analytics.py  app.py  auth.py  backup.py  build_hints.py  cli.py  cloudflare.py  config.py  crypto.py  db.py  deployer.py  docker_ctl.py  dockerfile.py  healthcheck_preflight.py  main.py  manifest.py  metrics.py  models.py  monitor.py  notifier.py  ratelimit.py  redisbus.py  scheduler.py  schemas.py  stack_render.py  webhooks.py
control-plane/tests/: conftest.py  test_api.py  test_background.py  test_build_hints.py  test_cli.py  test_dockerfile.py  test_healthcheck_preflight.py  test_metrics.py  test_scoping.py  test_spa.py  test_static_server.py  test_units.py
deploy/: README.md  apex-redirect-stack.yml  deploy.sh  install.sh  koyracloud-monitoring.yml  koyracloud-nfs.yml  koyracloud-stack.yml  koyracloud.env.example
deploy/apex-redirect/: Caddyfile
deploy/examples/: traefik-stack.yml
docs/: ANALYTICS.md  ARCHITECTURE.md  DISASTER-RECOVERY.md  MIGRATING-FROM-VERCEL.md  MONITORING.md  PERMISSIONS.md  SELF-HOST-TUTORIAL.md  TROUBLESHOOTING.md
examples/: README.md
runtime-image/: Dockerfile  entrypoint.py  koyra_static.py
web/: index.html  package-lock.json  package.json  prerender.js  vite.config.js
(+46 files in other folders)
