[project]
name = "koyracloud"
version = "0.1.0"
description = "Self-hosted PaaS control plane for the homelab Docker Swarm"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "cryptography>=43",
    "pyyaml>=6.0",
    "redis>=5.0",
    "croniter>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[project.scripts]
koyra = "koyracloud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["koyracloud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
